loadbalancers/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  type: NodePort
  ports:
  - port: 8080 
    nodePort: 31417
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx
