loadbalancers/l7-lb-http-2-aplications.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  rules:
  - host: nginx.miguelnunezburguera.com
    http:
      paths:
      - path:
        backend:
          serviceName: nginx
          servicePort: 80
  - host: apache.miguelnunezburguera.com
    http:
      paths:
      - path:
        backend:
          serviceName: apache
          servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: nginx
  name: nginx
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 31238
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      run: nginx
  template:
    metadata:
      labels:
        run: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: apache
  name: apache
spec:
  replicas: 1
  selector:
    matchLabels:
      run: apache
  template:
    metadata:
      labels:
        run: apache
    spec:
      containers:
      - image: httpd
        name: apache
        ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: apache
  name: apache
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 31237
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    run: apache
  type: NodePort
